--- a/package.json
+++ b/package.json
@@ -25,17 +25,19 @@
 		"@nestjs/core": "^10.2.5",
 		"@nestjs/mongoose": "^10.0.1",
 		"@nestjs/platform-express": "^10.3.8",
-		"@nestjs/platform-socket.io": "^10.3.8",
+		"@nestjs/platform-socket.io": "^10.3.10",
 		"@nestjs/serve-static": "^4.0.0",
 		"@nestjs/swagger": "^7.3.1",
 		"@nestjs/throttler": "^5.0.0",
-		"@nestjs/websockets": "^10.3.8",
+		"@nestjs/websockets": "^10.3.10",
+		"@sendgrid/mail": "^8.1.3",
 		"axios": "^1.7.2",
 		"bcryptjs": "^2.4.3",
 		"buffer-to-stream": "^1.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"cloudinary": "^2.2.0",
+		"firebase-admin": "^12.2.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.2",
 		"multer": "^1.4.5-lts.1",
