--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@nestjs/cache-manager": "^2.2.2",
 		"@nestjs/common": "^10.2.5",
 		"@nestjs/config": "^3.2.2",
 		"@nestjs/core": "^10.2.5",
@@ -34,6 +35,8 @@
 		"axios": "^1.7.2",
 		"bcryptjs": "^2.4.3",
 		"buffer-to-stream": "^1.0.0",
+		"cache-manager": "^5.7.6",
+		"cache-manager-redis-store": "2.0.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"cloudinary": "^2.2.0",
