--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
 		"@nestjs/config": "^3.2.2",
 		"@nestjs/core": "^10.2.5",
 		"@nestjs/mongoose": "^10.0.1",
-		"@nestjs/platform-express": "^10.4.1",
+		"@nestjs/platform-express": "^10.4.15",
 		"@nestjs/platform-socket.io": "^10.3.10",
+		"@nestjs/schedule": "^4.1.2",
 		"@nestjs/serve-static": "^4.0.2",
 		"@nestjs/swagger": "^7.3.1",
 		"@nestjs/throttler": "^5.0.0",
@@ -44,6 +45,7 @@
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^7.5.2",
 		"multer": "^1.4.5-lts.1",
+		"multer-s3": "^3.0.1",
 		"nodemailer": "^6.9.13",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.8.1",
